plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '5.2.0'
}

group = 'me.lulu'
version = '1.0.0-alpha-1'

compileJava {
    sourceCompatibility = '1.8'
    targetCompatibility = '1.8'
}

shadowJar {
    relocate("org.mineacademy", "org.mcwonderland.uhc.lib")
}

repositories {
    mavenCentral()
    flatDir { dir("./libs") }

    maven { url 'https://jitpack.io' }
    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
    maven { url 'https://nexus.scarsz.me/content/groups/public/' }

    maven {
        name = "naluwan"
        url = uri("https://repo.naluwan.net/snapshot")

        credentials {
            username = findProperty('naluwanUsername')
            password = findProperty('naluwanPassword')
        }
    }

    maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
}

dependencies {
    implementation 'org.mineacademy:Foundation:6.0.8'
    implementation 'com.github.lulu2002:DatouNms:1.2.2'

    compileOnly 'com.discordsrv:discordsrv:1.25.1'

    compileOnly name: 'PacketListenerAPI_v3.7.9-SNAPSHOT'

    compileOnly name: 'custom-ore-generator-2022.06.11'
    compileOnly 'com.github.Brettflan:WorldBorder:44f388f3ba'

    compileOnly 'org.spigotmc:spigot-api:1.19-R0.1-SNAPSHOT'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'

    testCompileOnly 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
}

test {
    useJUnit()

    maxHeapSize = '1G'
}

configurations {
    testCompile.extendsFrom compileOnly
}

tasks.withType(JavaCompile).configureEach {
    options.forkOptions.jvmArgs.addAll(['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'])
}
